fix the right-column overflowing off viewport

--- a/src/article/index.scss
+++ b/src/article/index.scss
@@ -10,7 +10,7 @@
   @media only all and (min-width: 730px) {
     margin-left: auto;
     margin-right: auto;
-    width: 230px;
+    max-width: 230px;
   }
 }
 
